# org-directory-api

./: .example.env  .gitignore  .mypy.ini  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
src/app/application/common/: models.py
src/app/application/common/exceptions/: auth.py  base.py  common.py
src/app/application/common/ports/: activity_gateway.py  building_gateway.py  initial_gateway.py  organization_gateway.py  uow.py
src/app/application/use_cases/: create_initial_data.py  get_organization_by_id.py  get_organizations_by_building.py  search_organization_by_activity.py  search_organization_by_name.py  search_organization_by_radius.py
src/app/bootstrap/: configs.py
src/app/bootstrap/entrypoints/: api.py
src/app/bootstrap/ioc/: application.py  config.py  containers.py  infrastructure.py
src/app/infrastructure/adapters/: activity_gateway.py  building_gateway.py  initial_gateway.py  organization_gateway.py
src/app/infrastructure/auth/: api_key_transport.py
src/app/infrastructure/sqlalchemy/: registry.py
src/app/infrastructure/sqlalchemy/alembic/: env.py
src/app/infrastructure/sqlalchemy/mappings/: activities.py  all.py  buildings.py  organization_activities.py  organization_phones.py  organizations.py
src/app/presentation/: exceptions.py
src/app/presentation/api/: base.py  responses.py  root.py
src/app/presentation/api/buildings/: router.py
src/app/presentation/api/healthcheck/: router.py
src/app/presentation/auth/: static_api_key_validator.py
(+5 files in other folders)
